--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: "rdpryor@doglover.com"
 #########################################################################################
 ######### Nothing below needs to be changed (unless you know what you're doing) #########
 #########################################################################################
-theme: "minima"
+theme: jekyll-theme-slate
 
 rss: rss
 
