--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: "rdpryor@doglover.com"
 #########################################################################################
 ######### Nothing below needs to be changed (unless you know what you're doing) #########
 #########################################################################################
-remote_theme: beautiful-jekyll
+theme: minima
 
 rss: rss
 
